crates/htui/tests/snapshots/chat__chat_edit_proposal.snap
---
source: crates/htui/tests/chat.rs
expression: harness.render()
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Chat
┌ Chat ────────────────────────────────────────────────────────────────────────────────────────────┐
│scripted · sonnet · Vulkan Tutorials · session fake-<session>          │
│you  fix it                                                                                       │
│edit  src/lib.rs  [accepted]                                                                      │
│--- a/src/lib.rs                                                                                  │
│+++ b/src/lib.rs                                                                                  │
│@@ -1 +1 @@                                                                                       │
│-old line                                                                                         │
│+new line                                                                                         │
│— turn ended (end_turn) —                                                                         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│i compose · Esc Esc end · t thoughts · j/k scroll                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
