crates/htui/tests/snapshots/chat__chat_permission_answered.snap
---
source: crates/htui/tests/chat.rs
expression: harness.render()
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Chat
┌ Chat ────────────────────────────────────────────────────────────────────────────────────────────┐
│scripted · sonnet · Vulkan Tutorials · session fake-<session>          │
│you  clean the build                                                                              │
│execute rm -rf build  [rejected]                                                                  │
│permission  reject (by user)                                                                      │
│— turn ended (end_turn) —                                                                         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│i compose · Esc Esc end · t thoughts · j/k scroll                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
