crates/htui/tests/snapshots/chat__chat_promoted.snap
---
source: crates/htui/tests/chat.rs
expression: rendered
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Chat
┌ Chat ────────────────────────────────────────────────────────────────────────────────────────────┐
│promoted · research · handoff · scripted · sonnet · fake-<session>     │
│you  You are continuing work already under way on htui:ANA-2, phase research, attempt 1.A previous│
│Picking the step back up.                                                                         │
│— turn ended (end_turn) —                                                                         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│i compose · Esc Esc end · t thoughts · j/k scroll                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
