crates/htui/tests/snapshots/chat__chat_refused.snap
---
source: crates/htui/tests/chat.rs
expression: harness.render()
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Chat
┌ Chat ────────────────────────────────────────────────────────────────────────────────────────────┐
│agy · gemini-3.7-flash-high · Vulkan Tutorials · session —                                        │
│no agent runtime in this harness                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│i compose the first prompt · a next agent                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
chat_start: no agent runtime in this harness
