crates/htui/tests/snapshots/chat__replay_answered_permission.snap
---
source: crates/htui/tests/chat.rs
expression: rendered
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Chat
┌ Chat ────────────────────────────────────────────────────────────────────────────────────────────┐
│replay · step …<step> · 4 rows · read-only · Esc leave                                          │
│you  clean the build                                                                              │
│execute rm -rf build  [rejected]                                                                  │
│permission  reject (by user)                                                                      │
│— turn ended (end_turn) —                                                                         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│Esc leave replay · t thoughts · j/k scroll                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
